...
  const header = useMemo(
    () => (
      <View>
        {/* Tab selector */}
        <View style={styles.tabs}>
          <TouchableOpacity
            testID="tab-to-me"
            style={[styles.tab, tab === 'to_me' && styles.tabActive]}
            onPress={() => handleTabChange('to_me')}>
            <Text
              style={[styles.tabText, tab === 'to_me' && styles.tabTextActive]}>
              To Me
            </Text>
...
